projet/k8s/notation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notation
  template:
    metadata:
      labels:
        app: notation
    spec:
      containers:
        - name: notation
          image: klkz/notation:v7
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          emptyDir: {}
