projet/k8s/notation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notation-service
spec:
  selector:
    app: notation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
